deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day1-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: day1-app
  template:
    metadata:
      labels:
        app: day1-app
    spec:
      containers:
      - name: nginx
        image: gamemaster007/day1-app:latest
        ports:
        - containerPort: 80
