service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day1-service
spec:
  type: ClusterIP
  selector:
    app: day1-app
  ports:
  - port: 80
    targetPort: 80
